--- a/hosts/hosts.ini
+++ b/hosts/hosts.ini
@@ -1,4 +1,5 @@
-[all]
-root@10.0.0.12   ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_private_key_file=/c/Users/kenel/.ssh/JETBLACK
 
-[workers]
+[magi]
+MELCHIOR    ansible_host=10.0.0.12  ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
+BALTHAZAR   ansible_host=10.0.0.10  ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
+CASPAR     ansible_host=10.0.0.11   ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
