--- a/hosts/hosts.ini
+++ b/hosts/hosts.ini
@@ -1,5 +1,7 @@
+[loadbalancers]
+NERV        ansible_host=10.0.0.9  ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
 
-[magi]
+[compute]
 MELCHIOR    ansible_host=10.0.0.12  ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
 BALTHAZAR   ansible_host=10.0.0.10  ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
-CASPAR     ansible_host=10.0.0.11   ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
+CASPAR      ansible_host=10.0.0.11   ansible_ssh_user=root   ansible_ssh_port=22 ansible_ssh_private_key_file=~/.ssh/LASTORDER
