--- a/roles/k3s-join/tasks/main.yml
+++ b/roles/k3s-join/tasks/main.yml
@@ -1,7 +1,30 @@
 ---
-- name: print k3s_token
-  debug:
-    var: hostvars['k3_init_dummy']['k3s_token']
+- name: open apiserver port
+  iptables:
+    chain: INPUT
+    protocol: tcp
+    destination_port: "6443"
+    jump: ACCEPT
 
-- name: join HA cluster
-  shell: K3S_TOKEN={{ hostvars['k3_init_dummy']['k3s_token'] }} k3s server --server https://10.0.0.12:6443 &
+- name: open kubelet metrics port
+  iptables:
+    chain: INPUT
+    protocol: tcp
+    destination_port: "10250"
+    jump: ACCEPT
+
+- name: open HA support ports
+  iptables:
+    chain: INPUT
+    protocol: tcp
+    destination_port: "2379:2380"
+    jump: ACCEPT
+
+- name: install k3s and join HA cluster
+  shell: curl -sfL https://get.k3s.io | K3S_TOKEN={{ hostvars['k3_init_dummy']['k3s_token'] }} sh -s server --server https://10.0.0.9:6443
+
+- name: make sure k3s is started and enabled
+  service:
+    name: k3s
+    state: started
+    enabled: yes
