--- a/roles/certbot/tasks/main.yml
+++ b/roles/certbot/tasks/main.yml
@@ -32,8 +32,16 @@
     state: stopped
     enabled: no
 
+# magi.systems
 - name: generate certificate for magi.systems domain (failure at this step will leave the LB disabled)
   shell: certbot certonly --standalone --non-interactive --agree-tos --email kenellorando@gmail.com -d magi.systems -d www.magi.systems
 
 - name: combine the fullchain and privkey together for haproxy
   shell: cat /etc/letsencrypt/live/magi.systems/cert.pem /etc/letsencrypt/live/magi.systems/privkey.pem > /etc/letsencrypt/live/magi.systems/haproxy_cert.pem
+
+# kenellorando.com
+- name: generate certificate for kenellorando.com domain (failure at this step will leave the LB disabled)
+  shell: certbot certonly --standalone --non-interactive --agree-tos --email kenellorando@gmail.com -d kenellorando.com -d www.kenellorando.com
+
+- name: combine the fullchain and privkey together for haproxy
+  shell: cat /etc/letsencrypt/live/kenellorando.com/cert.pem /etc/letsencrypt/live/kenellorando.com/privkey.pem > /etc/letsencrypt/live/kenellorando.com/haproxy_cert.pem
