Restructure to use shared IP and no dedicated LB

--- a/playbooks/k3s-install.yml
+++ b/playbooks/k3s-install.yml
@@ -9,3 +9,9 @@
   remote_user: root
   roles:
   - ../roles/k3s-join
+
+- name: install keepalived on all compute nodes
+  hosts: compute
+  remote_user: root
+  roles:
+  - ../roles/keepalived
